--- a/app/src/main/res/layout/action_bar_toolbar.xml
+++ b/app/src/main/res/layout/action_bar_toolbar.xml
@@ -9,7 +9,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/colorPrimary"
         app:theme="@style/ToolbarTheme" />
 
 </com.google.android.material.appbar.AppBarLayout>
