--- a/app/src/main/res/layout/activity_calication_drive.xml
+++ b/app/src/main/res/layout/activity_calication_drive.xml
@@ -21,7 +21,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimaryDark" />
+            android:background="@color/colorPrimary" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -150,7 +150,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:background="@drawable/rounded_button"
-        android:backgroundTint="@color/colorPrimaryDark"
+        android:backgroundTint="@color/colorPrimary"
         android:text="Calificar Cliente"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
