--- a/app/src/main/res/layout/activity_detail_request.xml
+++ b/app/src/main/res/layout/activity_detail_request.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:background="@color/colorPrimaryDark"
+    android:background="@color/colorPrimary"
     tools:context=".client.DetailRequestActivity">
 
     <fragment
@@ -39,7 +39,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:src="@drawable/ic_arrow_back"
-        app:civ_circle_background_color="@color/colorPrimaryDark"
+        app:civ_circle_background_color="@color/ColorDriverBtn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -59,7 +59,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="190dp"
-            android:background="@color/colorPrimaryDark"
+            android:background="@color/colorPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
