--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,16 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     android:background="@color/colorPrimary"
+    android:fitsSystemWindows="true"
     tools:context=".MainActivity">
-
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
 
         <ImageView
 
@@ -26,20 +24,19 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="40dp"
             android:text="Fem Taxi su Taxi Femenino"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
-            android:layout_margin="40dp"
             android:textSize="24dp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:gravity="bottom"
             android:layout_margin="10dp"
-            >
+            android:gravity="bottom"
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/btndriverDual"
@@ -50,11 +47,12 @@
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/rounded_button"
-                android:text="Conductora"
                 android:backgroundTint="#E91E63"
+                android:text="Conductora"
                 android:textColor="#FFFFFF"
                 android:textSize="20dp"
                 android:textStyle="bold" />
+
             <Button
                 android:id="@+id/btnncliente"
                 android:layout_width="166dp"
@@ -64,17 +62,14 @@
                 android:layout_marginRight="8dp"
                 android:layout_weight="1"
                 android:background="@drawable/rounded_button"
-                android:text="Cliente"
                 android:backgroundTint="#08020B"
+                android:text="Cliente"
                 android:textColor="#FFFFFF"
                 android:textSize="20dp"
                 android:textStyle="bold" />
 
-
         </LinearLayout>
 
-
     </LinearLayout>
-
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
