--- a/app/src/main/res/layout/activity_map_driver_booking.xml
+++ b/app/src/main/res/layout/activity_map_driver_booking.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context=".driver.MapDriverActivity">
 
     <include
@@ -44,8 +45,8 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        app:layout_constraintBottom_toTopOf="@+id/cv_info_client"
+        android:layout_marginBottom="120dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/include_toolbar" />
@@ -56,7 +57,7 @@
         android:layout_margin="30dp"
         android:elevation="5dp"
         app:contentPadding="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/cv_info_client"
+        app:layout_constraintBottom_toTopOf="@+id/container_info_client"
         app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
@@ -64,32 +65,52 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-
     </androidx.cardview.widget.CardView>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cv_info_client"
+    <com.github.florent37.shapeofview.shapes.BubbleView
+        android:id="@+id/container_info_client"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="10dp"
+        android:layout_height="130dp"
+        android:background="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:shape_bubble_arrowHeight="15dp"
+        app:shape_bubble_arrowPosition="top"
+        app:shape_bubble_arrowWidth="15dp"
+        app:shape_bubble_borderRadius="20dp">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/content_inset"
             android:orientation="vertical">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/img_user"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_marginEnd="10dp"
-                android:src="@drawable/ic_location"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/content_inset_half_card"
+                android:clickable="true"
+                android:contentDescription="Avatar"
+                android:focusable="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_login_user"
+                app:civ_circle_background_color="@color/overlay"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_login_user"
+                tools:ignore="ContentDescription,HardcodedText,VectorDrawableCompat" />
 
             <TextView
                 android:id="@+id/txt_name_user"
@@ -97,6 +118,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:text="nombre del conductor"
+                android:textColor="@color/white"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/img_user"
@@ -107,6 +129,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="email del conductor"
+                android:textColor="@color/white"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="@+id/txt_name_user"
                 app:layout_constraintStart_toStartOf="@+id/txt_name_user"
@@ -117,6 +140,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="Origen"
+                android:textColor="@color/white"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="@+id/txt_email_user"
                 app:layout_constraintStart_toStartOf="@+id/txt_email_user"
@@ -127,6 +151,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="Destino"
+                android:textColor="@color/white"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="@+id/txt_origin"
                 app:layout_constraintStart_toStartOf="@+id/txt_origin"
@@ -134,6 +159,20 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.cardview.widget.CardView>
+
+    </com.github.florent37.shapeofview.shapes.BubbleView>
+
+    <!--<androidx.cardview.widget.CardView
+        android:id="@+id/cv_info_client"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+
+
+    </androidx.cardview.widget.CardView>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
