--- a/app/src/main/res/layout/activity_opcion_dual_driver.xml
+++ b/app/src/main/res/layout/activity_opcion_dual_driver.xml
@@ -1,149 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:fitsSystemWindows="true"
     android:background="@color/colorPrimary"
-    tools:context=".driver.OpcionDualDriverActivity"
-    >
-<include layout="@layout/action_bar_toolbar"></include>
+    android:fitsSystemWindows="true"
+    tools:context=".driver.OpcionDualDriverActivity">
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:orientation="vertical"
-        >
-
-        <ImageView
-
-            android:layout_width="166dp"
-            android:layout_height="180dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="70dp"
-            app:srcCompat="@drawable/logo" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="30dp"
-            android:gravity="center"
-            android:text="Elige Opción:"
-            android:textColor="#FFFFFF"
-            android:textSize="35dp"
-            android:textStyle="bold">
-
-        </TextView>
-        <!--LineARLayout es donde empieza el contenido-->
-
-        <!--Otro Bloque estabamos que nos webeabamos_XD-->
-        <!--Ubicacion de Nombre y Apellidos Completos -->
-
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="top"
-            android:layout_marginTop="26dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
             android:orientation="vertical">
 
-            <LinearLayout
+            <ImageView
+
+                android:layout_width="166dp"
+                android:layout_height="180dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="70dp"
+                app:srcCompat="@drawable/logo" />
+
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginRight="20dp"
-                android:layout_marginLeft="20dp">
+                android:layout_height="50dp"
+                android:layout_marginTop="30dp"
+                android:gravity="center"
+                android:text="Elige Opción:"
+                android:textColor="#FFFFFF"
+                android:textSize="35dp"
+                android:textStyle="bold">
 
-                <ImageView
-                    android:layout_width="40dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="8dp"
-                    app:srcCompat="@drawable/emaillog" />
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/txtUsuario"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Ingrese Email"
-
-
-                        android:inputType="text|textEmailAddress"></com.google.android.material.textfield.TextInputEditText>
-                </com.google.android.material.textfield.TextInputLayout>
-
-            </LinearLayout>
-
+            </TextView>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginRight="20dp"
-                android:layout_marginLeft="20dp">
+                android:layout_marginTop="26dp"
+                android:gravity="top"
+                android:orientation="vertical">
 
-                <ImageView
-                    android:layout_width="40dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="8dp"
-                    app:srcCompat="@drawable/passlog" />
-
-                <com.google.android.material.textfield.TextInputLayout
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:orientation="horizontal">
 
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/txtPassword"
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="50dp"
+                        android:layout_marginTop="8dp"
+                        app:srcCompat="@drawable/emaillog" />
+
+                    <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Ingrese Password"
+                        android:layout_height="wrap_content">
 
-                        android:inputType="text|textPassword">
-                    </com.google.android.material.textfield.TextInputEditText></com.google.android.material.textfield.TextInputLayout>
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/txtUsuario"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="Ingrese Email"
+
+
+                            android:inputType="text|textEmailAddress"/>
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="50dp"
+                        android:layout_marginTop="8dp"
+                        app:srcCompat="@drawable/passlog" />
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/txtPassword"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="Ingrese Password"
+
+                            android:inputType="text|textPassword"/>
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                </LinearLayout>
+
+                <Button
+                    android:id="@+id/btnlogearDriver"
+                    android:layout_width="178dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="20dp"
+                    android:background="@drawable/rounded_button"
+                    android:backgroundTint="#155AA3"
+                    android:onClick="btnlogearDriver"
+                    android:text="Tengo Cuenta"
+
+                    android:textColor="@color/Colorletras"
+                    android:textSize="22dp"/>
+
+                <Button
+                    android:id="@+id/botonDualRegistro"
+                    android:layout_width="178dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="-80dp"
+                    android:background="@drawable/rounded_button"
+                    android:backgroundTint="#155AA3"
+                    android:text="Registro Conductor"
+                    android:textColor="@color/Colorletras"
+                    android:textSize="22dp"/>
 
             </LinearLayout>
-
-            <Button
-                android:id="@+id/btnlogearDriver"
-                android:layout_width="178dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="20dp"
-                android:background="@drawable/rounded_button"
-                android:backgroundTint="#155AA3"
-                android:onClick="btnlogearDriver"
-                android:text="Tengo Cuenta"
-
-                android:textColor="@color/Colorletras"
-                android:textSize="22dp">
-
-            </Button>
-
-            <Button
-                android:id="@+id/botonDualRegistro"
-                android:layout_gravity="center"
-                android:layout_width="178dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="-80dp"
-                android:text="Registro Conductor"
-                android:textColor="@color/Colorletras"
-                android:background="@drawable/rounded_button"
-                android:backgroundTint="#155AA3"
-                android:textSize="22dp">
-
-            </Button>
 
         </LinearLayout>
-    </LinearLayout>
 
+    </androidx.core.widget.NestedScrollView>
 
-
-    </ScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
