--- a/app/src/main/res/menu/client_menu.xml
+++ b/app/src/main/res/menu/client_menu.xml
@@ -2,11 +2,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/action_logout"
-        android:title="Cerrar Sesion"
-        app:showAsAction="never"/>
+    <item
+        android:id="@+id/menu_history_booking"
+        android:title="Historial de viajes"
+        app:showAsAction="never" />
 
-    <item android:id="@+id/action_logout2"
-        android:title="Adicional"
-        app:showAsAction="never"/>
+    <item
+        android:id="@+id/menu_edit_profile"
+        android:title="Editar perfil"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/menu_exit"
+        android:title="Cerrar Sesion"
+        app:showAsAction="never" />
 </menu>
