--- a/app/src/main/res/menu/driver_menu.xml
+++ b/app/src/main/res/menu/driver_menu.xml
@@ -2,9 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/action_logout"
-        android:title="Cerrar Sesion"
+    <item
+        android:id="@+id/menu_history_booking"
+        android:title="Historial de viajes"
+        app:showAsAction="never" />
+
+    <item android:id="@+id/menu_edit_profile"
+        android:title="Editar perfil"
         app:showAsAction="never"/>
 
-
+    <item android:id="@+id/menu_exit"
+        android:title="Cerrar Sesion"
+        app:showAsAction="never"/>
 </menu>
