--- a/app/src/main/res/layout/activity_login_cliente.xml
+++ b/app/src/main/res/layout/activity_login_cliente.xml
@@ -8,11 +8,7 @@
     android:fitsSystemWindows="true"
     tools:context=".client.LoginClientActivity">
 
-    <include
-        android:id="@+id/include_toolbar"
-        layout="@layout/action_bar_toolbar" />
-
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -75,5 +71,6 @@
 
         </LinearLayout>
 
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
