--- a/app/src/main/res/layout/activity_map_cliente.xml
+++ b/app/src/main/res/layout/activity_map_cliente.xml
@@ -5,21 +5,12 @@
     android:layout_height="match_parent"
     tools:context=".client.MapClienteActivity">
 
-    <com.google.android.material.appbar.MaterialToolbar
+    <include
     android:id="@+id/include_toolbar"
     layout="@layout/action_bar_toolbar" />
 
 
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_main"
-        app:menu="@menu/activity_main_drawer" >
 
-    </com.google.android.material.navigation.NavigationView>
 
     <fragment
         android:id="@+id/map"
