--- a/app/src/main/res/layout/activity_map_cliente.xml
+++ b/app/src/main/res/layout/activity_map_cliente.xml
@@ -1,17 +1,32 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".client.MapClienteActivity">
+    android:fitsSystemWindows="false"
+    tools:context=".client.MapClienteActivity"
+    tools:openDrawer="start">
 
     <include
     android:id="@+id/include_toolbar"
-    layout="@layout/action_bar_toolbar" />
+    layout="@layout/action_bar_toolbar"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+        />
 
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
 
+        android:layout_width="wrap_content"
+        android:layout_height="600dp"
 
+        android:layout_gravity="start"
 
+        app:headerLayout="@layout/nav_header_main"
+        app:menu="@menu/activity_main_drawer" >
+
+    </com.google.android.material.navigation.NavigationView>
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
