--- a/app/src/main/res/layout/activity_profile_driver.xml
+++ b/app/src/main/res/layout/activity_profile_driver.xml
@@ -122,7 +122,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:drawablePadding="@dimen/content_inset"
-                        android:enabled="false"
+                        android:enabled="true"
                         android:imeOptions="actionNext"
                         android:inputType="textPersonName"
                         android:textColor="@color/black"
@@ -144,7 +144,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:drawablePadding="@dimen/content_inset"
-                        android:enabled="false"
+                        android:enabled="true"
                         android:imeOptions="actionNext"
                         android:inputType="textEmailAddress"
                         android:textColor="@color/black"
