--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="40dp"
-            android:text="Fem Taxi su Taxi Femenino"
+            android:text="FEMTaxi tu Taxi Femenino"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
             android:textSize="24dp"
