--- a/app/src/main/res/layout/activity_map_driver.xml
+++ b/app/src/main/res/layout/activity_map_driver.xml
@@ -18,15 +18,20 @@
 
     <Button
         android:id="@+id/btnConnect"
-        android:layout_width="match_parent"
+        android:layout_width="236dp"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:layout_margin="30dp"
         android:layout_marginLeft="50dp"
         android:background="@drawable/rounded_button"
         android:backgroundTint="@color/colorPrimary"
+        android:gravity="center"
         android:text="CONECTARSE"
         android:textColor="#FFFFFF"
-        android:textSize="25dp" />
+
+        android:textSize="25dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
